Completed styling the right section of the App

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    border: 1px solid #eee;
+    border: 1px solid #eded;
   }
   .right-section {
     flex: 1;
