--- a/src/components/ChatForm/ChatForm.scss
+++ b/src/components/ChatForm/ChatForm.scss
@@ -27,4 +27,22 @@
     font-size: 16px;
     color: #000;
   }
+  .sound-wave {
+    position: absolute;
+    width: 50px;
+    height: 20px;
+    right: 60px;
+  }
+  .file-share {
+    position: relative;
+    input {
+      width: 25px;
+      height: 30px;
+      opacity: 0;
+      position: absolute;
+      left: 15px;
+      z-index: 1;
+      cursor: pointer;
+    }
+  }
 }
