--- a/src/components/ChatListing/ChatListing.scss
+++ b/src/components/ChatListing/ChatListing.scss
@@ -1,61 +1,64 @@
-.chat-cards-listing{
-    overflow-y: auto;
-    .card{
-        display: flex;
-        align-items: center;
-        padding: 0 15px;
-        min-height: 72px;
-        border-bottom: 1px solid #eee;
-        position: relative;
-        .img-container{
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            overflow: hidden;
-            background: #eee;
-            border: 1px solid #ddd;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color:#555;
-            font-size: 25px;
-            img{
-                width: 100%;
-                height: 100%;
-            }
-        }
-        .time{
-            position: absolute;
-            top:15px;
-            right:15px;
-            font-size: 12px;
-            color:#00000079;
-        }
-        .action-btn{
-            position: absolute;
-            top:55%;
-            right:15px;
-            display: flex;
-            color: #00000079;
-        }
-        &:hover{
-            background:#f5f5f5 ;
-            cursor: pointer;
-        }
+.chat-cards-listing {
+  overflow-y: auto;
+  .card {
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    min-height: 72px;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    .img-container {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+      background: #eee;
+      border: 1px solid #ddd;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #555;
+      font-size: 25px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
-    .card-detail{
-        margin-left: 15px;
-        flex: 1;
-        .title{
-            font-weight: 500;
-            margin: 0;
-            margin-bottom: 5px;
-            color: #333;
-        }
-        .desc{
-            margin: 0;
-            color: #00000099;
-            font-size: 15px;
-        }
+    .time {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      font-size: 12px;
+      color: #00000079;
     }
+    .action-btn {
+      position: absolute;
+      top: 55%;
+      right: 15px;
+      display: flex;
+      color: #00000079;
+    }
+    &:hover {
+      background: #f5f5f5;
+      cursor: pointer;
+    }
+  }
+  .card-detail {
+    margin-left: 15px;
+    flex: 1;
+    .title {
+      font-weight: 500;
+      margin: 0;
+      margin-bottom: 5px;
+      color: #333;
+    }
+    .desc {
+      margin: 0;
+      color: #00000099;
+      font-size: 15px;
+    }
+  }
+}
+a {
+  text-decoration: none;
 }
