--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,25 +1,28 @@
-.profile-section{
+.profile-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #ededed;
+  min-height: 59px;
+  padding: 0 15px;
+  .img-container {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
     display: flex;
-    align-items:center;
-    justify-content: space-between;
-    background: #ededed;
-    min-height: 59px;
-    padding: 0 15px;
-    .img-container{
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #eee;
-        font-size: 25px;
-        color: #555;
-        border: 1px solid #ddd;
-        img{
-            width: 100%;
-            height: 100%;
-        }
+    align-items: center;
+    justify-content: center;
+    background: #eee;
+    font-size: 25px;
+    color: #555;
+    border: 1px solid #ddd;
+    img {
+      width: 100%;
+      height: 100%;
     }
+  }
+  .logout:hover {
+    cursor: pointer;
+  }
 }
